Implement Julia language

--- a/src/style.styl
+++ b/src/style.styl
@@ -6,6 +6,7 @@ body.theme-1 {
   --color-variable: #ABB2BF;
   --color-expression: #ABB2BF;
   --color-storage-type: #C678DD;
+  --color-symbol: #61AFEF;
   --color-keyword: #61AFEF;
   --color-type: #E5C07B;
   --color-class: #E5C07B;
@@ -22,6 +23,7 @@ body.theme-2 {
   --color-variable: #383A42;
   --color-expression: #383A42;
   --color-storage-type: #A626A4;
+  --color-symbol: #4078f2;
   --color-keyword: #4078F2;
   --color-type: #C18401;
   --color-class: #C18401;
@@ -61,6 +63,7 @@ body.theme-2 {
 .variable { color: var(--color-variable); }
 .expression { color: var(--color-expression); }
 .storage-type { color: var(--color-storage-type); }
+.symbol { color: var(--color-symbol); }
 .keyword { color: var(--color-keyword); }
 .type { color: var(--color-type); }
 .class { color: var(--color-class); }
