Improve colorschemes, add Gruvbox
Improve copyright section, fix spacing issue between zsh command and
args

--- a/src/style.styl
+++ b/src/style.styl
@@ -1,21 +1,85 @@
 body.theme-1 {
+  --color-background: #2D2A2E;   /* black */
+  --color-white-space: #4B4D4E;  /* dark gray */
+  --color-collapsed: #727072;    /* gray */
+  --color-comment: #727072;      /* gray */
+  --color-variable: #FCFCFA;     /* white */
+  --color-expression: #FCFCFA;   /* white */
+  --color-storage-type: #FF6188; /* red */
+  --color-symbol: #78DCE8;       /* cyan */
+  --color-keyword: #FF6188;      /* red */
+  --color-type: #FFD866;         /* yellow */
+  --color-class: #FFD866;        /* yellow */
+  --color-string: #A9DC76;       /* green */
+  --color-constant: #AB9DF2;     /* purple */
+  --color-number: #AB9DF2;       /* purple */
+
+  --color-zsh-text: #727072;
+  --color-zsh-path-background: #78DCE8;
+  --color-zsh-path-foreground: #2D2A2E;
+  --color-zsh-branch-background: #A9DC76;
+  --color-zsh-branch-foreground: #2D2A2E;
+  --color-zsh-command-valid: #A9DC76;
+  --color-zsh-command-invalid: #FF6188;
+  --color-zsh-args: #FCFCFA;
+  --color-zsh-args-autocomplete: #727072;
+}
+
+body.theme-2 {
   --color-background: #282C34;
   --color-white-space: #3C4049;
   --color-collapsed: #3C4049;
   --color-comment: #5C6370;
   --color-variable: #ABB2BF;
   --color-expression: #ABB2BF;
-  --color-storage-type: #C678DD;
-  --color-symbol: #61AFEF;
-  --color-keyword: #61AFEF;
-  --color-type: #E5C07B;
-  --color-class: #E5C07B;
+  --color-storage-type: #E06C75;
+  --color-symbol: #56B6C2;
+  --color-keyword: #E06C75;
+  --color-type: #D19A66;
+  --color-class: #D19A66;
   --color-string: #98C379;
-  --color-constant: #D19A66;
-  --color-number: #D19A66;
+  --color-constant: #C678DD;
+  --color-number: #C678DD;
+
+  --color-zsh-text: #5C6370;
+  --color-zsh-path-background: #59B6C2;
+  --color-zsh-path-foreground: #282C34;
+  --color-zsh-branch-background: #98C379;
+  --color-zsh-branch-foreground: #282C34;
+  --color-zsh-command-valid: #98c379;
+  --color-zsh-command-invalid: #E06C75;
+  --color-zsh-args: #ABB2BF;
+  --color-zsh-args-autocomplete: #5C6370;
 }
 
-body.theme-2 {
+body.theme-3 {
+  --color-background: #FBF1C7;   /* black */
+  --color-white-space: #D5C4A1;  /* dark gray */
+  --color-collapsed: #7C6F64;    /* gray */
+  --color-comment: #7C6F64;      /* gray */
+  --color-variable: #3C3836;     /* white */
+  --color-expression: #3C3836;   /* white */
+  --color-storage-type: #CC241D; /* red */
+  --color-symbol: #458588;       /* cyan */
+  --color-keyword: #CC241D;      /* red */
+  --color-type: #D79921;         /* yellow */
+  --color-class: #D79921;        /* yellow */
+  --color-string: #98971A;       /* green */
+  --color-constant: #B16286;     /* purple */
+  --color-number: #B16286;       /* purple */
+
+  --color-zsh-text: #7C6F64;
+  --color-zsh-path-background: #458588;
+  --color-zsh-path-foreground: #FBF1C7;
+  --color-zsh-branch-background: #98971A;
+  --color-zsh-branch-foreground: #FBF1C7;
+  --color-zsh-command-valid: #98971A;
+  --color-zsh-command-invalid: #CC241D;
+  --color-zsh-args: #3C3836;
+  --color-zsh-args-autocomplete: #7C6F64;
+}
+
+body.theme-4 {
   --color-background: #FAFAFA;
   --color-white-space: #D3D4D5;
   --color-collapsed: #D3D4D5;
